--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h2>Juegos de Bere :) </h2>
+<h2>Juegos de Bere esta es una prueba :) </h2>
 
 <img src="cat.png" width="200" height="200"/>
   
